@@ -16,6 +16,7 @@ import javafx.stage.Stage;
 import network.Network;
 
 import java.io.IOException;
+import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.*;
 
@@ -28,7 +29,7 @@ public class MainMenu extends Application {
 
 
     private LinkedHashMap<String, MenuCommand> menuItems;
-    public MainMenu() throws IOException {
+    public MainMenu() throws IOException, SQLException {
         network = Network.getNetwork("LvivNet", "+380666990915",
                 "lvivnet@microsoft.com");
         menuItems = new LinkedHashMap<>();
@@ -86,6 +87,7 @@ public class MainMenu extends Application {
     private TableColumn<BaseTariff, Integer> ID;
     @FXML
     private TableColumn <BaseTariff, Integer> users_col;
+    //public TableColumn <BaseTariff, Integer>internet_id;
     @FXML
     private TableColumn<BaseTariff, Double> Internet;
     @FXML
@@ -140,31 +142,73 @@ public class MainMenu extends Application {
         PRICE.setCellValueFactory(new PropertyValueFactory<BaseTariff, Integer>("price"));
         Other_Net.setCellValueFactory(new PropertyValueFactory<BaseTariff, Double>("other"));
         ABROAD.setCellValueFactory(new PropertyValueFactory<BaseTariff, Double>("abroad"));
-        Internet.setCellValueFactory(new PropertyValueFactory<BaseTariff, Double>("internet"));
+        Internet.setCellValueFactory(new PropertyValueFactory<BaseTariff, Double>("Internet"));
         //tableTariffs.setItems(tariffData);
     }
 
     @FXML
-    void click(ActionEvent event) {
+    void click(ActionEvent event) throws SQLException, IOException, InterruptedException {
         BaseTariff tariff = null;
         tariffData.clear();
         MenuCommand cm;
+        ResultSet rs;
         /*tariffData.addAll(network.getTariffs());
         System.out.println("tariffs are added");*/
+
        if (event.getSource() == show_all_btn) {
            cm = menuItems.get("view");
-           tariffData.addAll(cm.execute(Collections.singletonList("all")));
-           showTariff(tariffData);
+           rs = cm.execute(List.of("all"));
+           showTariff(rs);
+           //showTariff(tariffData);
        } else if (event.getSource() == exit_prg) {
            cm = menuItems.get("exit");
-           cm.execute(null);
+           cm.execute(List.of());
        }
     }
 
-    private void showTariff(ObservableList<BaseTariff> tariffData) {
+    private void showTariff(ResultSet rs) throws SQLException {
+        BaseTariff tariff = null;
+        tariffData.clear();
+        while (rs.next())
+        {
+            if (rs.getString("Type").contains("Start")) {
+                tariff = new StartTariff(rs.getInt("ID"),
+                        rs.getString("Name"),
+                        rs.getString("Type"),
+                        rs.getInt("Users"),
+                        rs.getInt("SMS"),
+                        rs.getInt("MinutesThisNet"),
+                        rs.getInt("Price"));
+            }
+            else if (rs.getString("Type").contains("Net")) {
+                tariff = new SuperNetTariff(rs.getInt("ID"),
+                        rs.getString("Name"),
+                        rs.getString("Type"),
+                        rs.getInt("Users"),
+                        rs.getInt("SMS"),
+                        rs.getInt("MinutesThisNet"),
+                        rs.getInt("Price"),
+                        rs.getInt("MinutesOtherNet"),
+                        rs.getInt("Abroad"),
+                        rs.getInt("Internet"));
+            }
+            else {
+                tariff = new SuperTariff(rs.getInt("ID"),
+                        rs.getString("Name"),
+                        rs.getString("Type"),
+                        rs.getInt("Users"),
+                        rs.getInt("SMS"),
+                        rs.getInt("MinutesThisNet"),
+                        rs.getInt("Price"),
+                        rs.getInt("MinutesOtherNet"),
+                        rs.getInt("Abroad"));
+            }
+            tariffData.add(tariff);
+        }
+
         tableTariffs.setItems(tariffData);
-        tariff_numb_btn.setText("" + network.getNumberTariffs());
-        user_numb_btn.setText("" + network.calculateUserNumber());
+        //tariff_numb_btn.setText("" + network.getNumberTariffs());
+        //user_numb_btn.setText("" + network.calculateUserNumber());
     }
 
 
